# VoicemeeterHost

./: .gitmodules  CMakeLists.txt
Resources/Strings/: English.json  TraditionalChinese.json
Source/: Main.cpp
Source/Audio/: AudioDeviceSettings.cpp  AudioDeviceSettings.h
Source/Graph/: ConnectionComponent.cpp  ConnectionComponent.h  GraphComponent.cpp  GraphComponent.h  NodeComponent.cpp  NodeComponent.h
Source/Localization/: LanguageManager.cpp  LanguageManager.h
Source/Plugin/: PluginManager.cpp  PluginManager.h  PluginWindow.cpp  PluginWindow.h
Source/UI/: MainWindow.cpp  MainWindow.h  SystemTrayMenu.cpp  SystemTrayMenu.h
Source/Utils/: MathUtils.h
Source/Voicemeeter/: VoicemeeterInterface.cpp  VoicemeeterInterface.h  VoicemeeterRemote.h
